Adds i18n support for reply box labels
Implements internationalization for labels within the reply box,
including "To", "CC", and "BCC", and updates translations in
French and Marathi.

Also adds `.DS_Store` to the `.gitignore` file.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -647,5 +647,9 @@
   "contact.notes.help": "Add note for this contact to keep track of important information and conversations.",
   "setup.completeYourSetup": "Complete your setup",
   "setup.createFirstInbox": "Create your first inbox",
-  "setup.inviteTeammates": "Invite teammates"
+  "setup.inviteTeammates": "Invite teammates",
+  "replyBox.bcc": "BCC",
+  "replyBox.removeBcc": "Remove BCC",
+  "replyBox.to": "To",
+  "replyBox.cc": "CC"
 }
